--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/yellow_back"
+    tools:context=".activities.MainActivity">
 
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="258dp"
+        android:layout_height="257dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="144dp"
         android:contentDescription="@string/qr_code"
-        android:src="@drawable/app_logo"
+        android:src="@drawable/main_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.585"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,30 +32,5 @@
         app:layout_constraintStart_toStartOf="@id/app_logo"
         app:layout_constraintTop_toBottomOf="@id/app_logo" />
 
-
-    <!--    &lt;!&ndash;Edit text to enter text-->
-    <!--        for creating a QR code&ndash;&gt;-->
-    <!--    <EditText-->
-    <!--        android:id="@+id/idEdt"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@id/idIVQrcode"-->
-    <!--        android:layout_marginStart="20dp"-->
-    <!--        android:layout_marginTop="30dp"-->
-    <!--        android:layout_marginEnd="20dp"-->
-    <!--        android:autofillHints=""-->
-    <!--        android:hint="@string/enter_your_info"-->
-    <!--        android:inputType="text" />-->
-
-    <!--    &lt;!&ndash;Button for creating a QR code&ndash;&gt;-->
-    <!--    <Button-->
-    <!--        android:id="@+id/idBtnGenerateQR"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@id/idEdt"-->
-    <!--        android:layout_marginStart="20dp"-->
-    <!--        android:layout_marginTop="30dp"-->
-    <!--        android:layout_marginEnd="20dp"-->
-    <!--        android:text="@string/generate_qr_code" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
