--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
 
     <color name="black_shade_1">#292036</color>
     <color name="yellow">#ffce44</color>
+    <color name="DarkYellow">#715608</color>
 </resources>
