Modify Violation Form

--- a/app/src/main/res/layout/activity_violation_form.xml
+++ b/app/src/main/res/layout/activity_violation_form.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="25dp"
     android:background="@drawable/yellow_back"
     tools:context=".activities.ViolationForm">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Violation"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:textColor="@color/DarkYellow"
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
