--- a/Frontend/app/src/main/res/layout/activity_home_ticket_inspector.xml
+++ b/Frontend/app/src/main/res/layout/activity_home_ticket_inspector.xml
@@ -23,83 +23,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/idCardView"
+    <Button
+        android:id="@+id/idBTNScan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/idTVWelcome"
-        app:layout_constraintStart_toStartOf="@id/idTVWelcome"
-        app:layout_constraintStart_toEndOf="@id/idTVWelcome">
-
-        <LinearLayout
-            android:id="@+id/row1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-
-                <TextView
-                    android:id="@+id/card1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:width="150dp"
-                    android:height="150dp"
-                    android:gravity="center"
-                    android:text="card1"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:background="@drawable/rounded_yellow_button"
-                    android:layout_margin="20dp"/>
-
-                <TextView
-                    android:id="@+id/card2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:width="150dp"
-                    android:height="150dp"
-                    android:gravity="center"
-                    android:text="card2"
-                    android:textSize="20sp"
-                    android:background="@drawable/rounded_yellow_button"
-                    android:textAlignment="center"
-                    android:layout_margin="20dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/row2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="center" >
-
-            <TextView
-                android:id="@+id/card3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:width="150dp"
-                android:height="150dp"
-                android:gravity="center"
-                android:text="card1"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:background="@drawable/rounded_yellow_button"
-                android:layout_margin="20dp"/>
-
-            <TextView
-                android:id="@+id/card4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:width="150dp"
-                android:height="150dp"
-                android:gravity="center"
-                android:text="card2"
-                android:textSize="20sp"
-                android:background="@drawable/rounded_yellow_button"
-                android:textAlignment="center"
-                android:layout_margin="20dp"/>
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/rounded_button"
+        android:text="Scan QR"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/idTVWelcome"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/idTVWelcome"
+        app:layout_constraintTop_toBottomOf="@+id/idTVWelcome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
