Completion of all functions

--- a/Frontend/app/src/main/res/layout/activity_choose_role.xml
+++ b/Frontend/app/src/main/res/layout/activity_choose_role.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    android:background="@drawable/back_1"
+    android:background="@drawable/back_orange"
     tools:context=".activities.ChooseRole">
 
     <TextView
@@ -19,7 +19,7 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text="Let's Get Started"
-        android:textColor="@color/DarkYellow"
+        android:textColor="#EA8300"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.034" />
+        app:layout_constraintVertical_bias="0.001" />
 
     <TextView
         android:id="@+id/instructions"
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:textSize="16sp"
         android:text="Welcome to our platform! To get started, please select your account type. Are you a"
-        android:textColor="@color/DarkYellow"
+        android:textColor="#EF6C00"
         app:layout_constraintEnd_toEndOf="@id/idTVInspectorRegisterHeading"
         app:layout_constraintStart_toStartOf="@id/idTVInspectorRegisterHeading"
         app:layout_constraintTop_toBottomOf="@id/idTVInspectorRegisterHeading" />
@@ -46,11 +46,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:paddingLeft="20dp"
         android:text="Choose Your Role"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/instructions"
         app:layout_constraintHorizontal_bias="0.0"
@@ -63,8 +63,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/idTVChooseRoleTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:paddingLeft="60dp"
+        android:layout_marginTop="40dp"
+        android:paddingLeft="40dp"
         app:layout_constraintEnd_toEndOf="@+id/idTVChooseRoleTitle"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/idTVChooseRoleTitle"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:text="Passenger"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <RadioButton
             android:id="@+id/inspector_option"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:text="Ticket Inspector"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
     </RadioGroup>
 
     <Button
@@ -97,8 +97,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:enabled="false"
-        android:textColor="@color/DarkYellow"
+        android:textColor="#EC8502"
         android:text="Continue"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@id/account_type_group"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/account_type_group"
