--- a/Frontend/app/src/main/res/drawable/input_field_shape.xml
+++ b/Frontend/app/src/main/res/drawable/input_field_shape.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#00FEFFFF"></solid>
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/DarkYellow" android:width="2dp"/>
+    <stroke android:color="#C7C3BE" android:width="1dp"/>
 </shape>
