--- a/Frontend/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".activities.Login"
-    android:background="@drawable/yellow_back">
+    android:background="@color/yellow"
+    tools:context=".activities.Login">
 
     <ImageView
         android:id="@+id/logoImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="45dp"
         android:src="@drawable/main_logo"
         android:contentDescription="@string/app_name" />
 
@@ -23,18 +23,21 @@
         android:layout_below="@id/logoImageView"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:elevation="4dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:background="@color/white">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:text="Sign in"
-            android:textColor="#9E680E"
-            android:textSize="40sp"
+            android:layout_marginTop="15dp"
+            android:textColor="#FF8F00"
+            android:textSize="44sp"
+            android:paddingLeft="10dp"
             android:textStyle="bold" />
 
         <EditText
@@ -64,7 +67,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="320dp"
             android:layout_margin="16dp"
-            android:background="#9A6408"
+            android:backgroundTint="@color/Orange"
             android:text="@string/sign_in"
             android:textSize="16sp"
             android:textColor="#FFFFFF" />
@@ -78,8 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/formLayout"
-        android:layout_marginTop="12dp"
-        android:textSize="16sp"
+        android:layout_marginTop="25dp"
+        android:textSize="18sp"
         android:text="Don't have an account?"
         android:textColor="#333333" />
 
@@ -91,10 +94,10 @@
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/formLayout"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="35dp"
         android:text="Create an account"
-        android:textSize="16sp"
-        android:textColor="#CF8516"
+        android:textSize="18sp"
+        android:textColor="#6C460D"
         android:clickable="true"
         android:onClick="openChooseRole"/>
 
